--- a/WebSiteRestaurant/Views/Shared/_Layout.cshtml
+++ b/WebSiteRestaurant/Views/Shared/_Layout.cshtml
@@ -28,7 +28,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Категории</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Вход/Регистрация</a>
                         </li>
                     </ul>
                 </div>
